feat: four meme parse